--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -398,5 +398,15 @@
   "noData":"لاتوجد بيانات",
   "SearchNofound":"لا يمكن العثور على البحث",
   "tryAnother":"لا يمكن العثور على كلمتك الرئيسية، يرجى تجربة كلمة رئيسية أخرى"
+  },
+  "favoriteItems":{
+    "heading": "العناصر المفضلة",
+    "searchFavoriteItems": "البحث عن العناصر المفضلة...",
+    "RemoveModal":{
+      "heading": "إزالة العنصر المفضل",
+      "subHeading": "هل أنت متأكد أنك تريد إزالة هذه العناصر المفضلة من قائمتك؟",
+      "yes": "نعم",
+      "no": "لا"
+    }
   }
 }
