--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -398,5 +398,9 @@
   "noData":"لاتوجد بيانات",
   "SearchNofound":"لا يمكن العثور على البحث",
   "tryAnother":"لا يمكن العثور على كلمتك الرئيسية، يرجى تجربة كلمة رئيسية أخرى"
+  },
+  "searchPage":{
+    "yourSearched":"بحثت عنه",
+    "mostRecent":"الأحدث"
   }
 }
