--- a/i18n/en.json
+++ b/i18n/en.json
@@ -341,5 +341,9 @@
   "noData":"No Data Found",
   "SearchNofound":"Search can’t be found",
   "tryAnother":"Your keyword can’t be found, please try another keyword "
-  }
+  },
+"searchPage":{
+  "yourSearched":"Your searched for",
+  "mostRecent":"Most recent"
+}
 }
