fix: styles JoinNowbtn

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -67,7 +67,7 @@
       "follow": "Follow",
       "unfollow": "Unfollow",
       "Join":"Join now",
-      "Joined": "Joined"
+      "Joined": "Leave"
     }
   },
   "profile": {
