refactor: email verification - otp

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -101,8 +101,7 @@
       "email": "Email",
       "verifyOtp": "Verify Email Otp",
       "verifyEmail": "Verify Email",
-      "emailOtpPara": "We have sent the verification link in your email. Please click on continue and verify.",
-      "resendCode": "Didn’t get the code?",
+      "emailOtpPara": "We have sent the Otp in your email. Please enter the Otp for the verification.",      "resendCode": "Didn’t get the code?",
       "resendText": "Resend Code",
       "emailChanged": "Email address has successfully been changed.",
       "phoneChanged": "Phone number has successfully been changed.",
