bug fixed: navigation of not verified users to VerifyOtp using query params

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -189,6 +189,7 @@
     "invalidEmail": "Invalid email",
     "invalidPassword": "Invalid password",
     "passwordNotMatch": "Password does not match",
+    "emailNotVerified": "Email is not verified, please verify email first",
     "invalidNumber": "Invalid Number",
     "enterMobileNumber": "Enter Mobile Number",
     "required": "Required Field",
